--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <div class="col-12 offset-sm-0 col-sm-12 offset-md-3 col-md-4 offset-lg-3 col-lg-2">
                     <div class="mainScreenBtnWrap">
                         <a href="#cantact">
-                            <div class="btn mainScreen-btn">
+                            <button class="btn mainScreen-btn">
                                 Contact Me
-                            </div>
+                            </button>
                         </a>
                     </div>
                 </div>
